added cover photos

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
 /*general styles*/
+.quicksand-uniquifier {
+  font-family: "Quicksand", serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
+}
 img {
   max-width: 400px;
   width: 350px;
